--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "mediaelement": "^7.0.5",
     "moment": "^2.30.1",
+    "plyr-react": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
@@ -36,6 +37,7 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "react-top-loading-bar": "^2.3.1",
     "react-use-cart": "^1.13.0",
     "react-use-downloader": "^1.2.8",
     "react-video-cover": "^1.2.2",
