--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intl": "^6.6.8",
