--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
     "react-intl": "^6.6.8",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
