--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@tabler/icons-react": "^3.3.0",
     "@types/mapbox-gl": "^3.1.0",
+    "agora-rtc-react": "^2.2.0",
+    "agora-rtc-sdk-ng": "^4.21.0",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -58,6 +60,7 @@
     "react-video-cover": "^1.2.2",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.8",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.4",
