--- a/package.json
+++ b/package.json
@@ -17,22 +17,26 @@
     "@react-google-maps/api": "^2.19.3",
     "@tabler/icons-react": "^3.3.0",
     "@types/mapbox-gl": "^3.1.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.6.0",
     "agora-rtc-react": "^2.2.0",
     "agora-rtc-sdk-ng": "^4.21.0",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "cloudinary-react": "^1.8.1",
+    "crypto-react": "^0.2.1",
     "currency-codes": "^2.1.0",
     "dayjs": "^1.11.11",
     "fluid-player": "^3.32.0",
     "google-map-react": "^2.2.1",
     "ipinfo": "^1.5.1",
     "js-cookie": "^3.0.5",
+    "js-sha256": "^0.11.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
     "mapbox-gl": "^3.4.0",
+    "md5": "^2.3.0",
     "mediaelement": "^7.0.5",
     "moment": "^2.30.1",
     "plyr-react": "^5.3.0",
