--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crypto-react": "^0.2.1",
     "currency-codes": "^2.1.0",
     "dayjs": "^1.11.11",
+    "emoji-picker-react": "^4.11.1",
     "fluid-player": "^3.32.0",
     "google-map-react": "^2.2.1",
     "ipinfo": "^1.5.1",
@@ -69,7 +70,8 @@
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.4",
     "video-react": "^0.16.0",
-    "video.js": "^8.12.0"
+    "video.js": "^8.12.0",
+    "zego-zim-web": "^2.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
