--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.4.0",
     "md5": "^2.3.0",
     "mediaelement": "^7.0.5",
