--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
