--- a/package.json
+++ b/package.json
@@ -14,17 +14,13 @@
     "@mantine/core": "^7.8.1",
     "@mantine/dates": "^7.9.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
-    "@react-google-maps/api": "^2.19.3",
     "@tabler/icons-react": "^3.3.0",
     "@types/mapbox-gl": "^3.1.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.6.0",
-    "agora-rtc-react": "^2.2.0",
-    "agora-rtc-sdk-ng": "^4.21.0",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "cloudinary-react": "^1.8.1",
-    "crypto-react": "^0.2.1",
     "currency-codes": "^2.1.0",
     "dayjs": "^1.11.11",
     "emoji-picker-react": "^4.11.1",
@@ -32,13 +28,10 @@
     "google-map-react": "^2.2.1",
     "ipinfo": "^1.5.1",
     "js-cookie": "^3.0.5",
-    "js-sha256": "^0.11.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
-    "lodash": "^4.17.21",
     "mapbox-gl": "^3.4.0",
-    "md5": "^2.3.0",
     "mediaelement": "^7.0.5",
     "moment": "^2.30.1",
     "plyr-react": "^5.3.0",
@@ -51,7 +44,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
-    "react-intl": "^6.6.8",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
     "react-otp-input": "^3.1.1",
@@ -72,10 +64,10 @@
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.4",
     "video-react": "^0.16.0",
-    "video.js": "^8.12.0",
-    "zego-zim-web": "^2.9.0"
+    "video.js": "^8.12.0"
   },
   "devDependencies": {
+    "@types/node": "^22.1.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -83,6 +75,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.5.4",
     "vite": "^5.2.0"
   }
 }
