--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^7.8.1",
     "@mantine/dates": "^7.9.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@react-oauth/google": "^0.12.1",
     "@tabler/icons-react": "^3.3.0",
     "@types/mapbox-gl": "^3.1.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.6.0",
