--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "currency-codes": "^2.1.0",
     "dayjs": "^1.11.11",
     "emoji-picker-react": "^4.11.1",
+    "facebook-oauth-react": "^1.1.5",
     "fluid-player": "^3.32.0",
     "google-map-react": "^2.2.1",
+    "i18next": "^23.12.2",
     "ipinfo": "^1.5.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -43,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
