--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fluid-player": "^3.32.0",
     "google-map-react": "^2.2.1",
     "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "ipinfo": "^1.5.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -48,6 +49,7 @@
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^9.13.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
     "react-otp-input": "^3.1.1",
