--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@coreui/coreui": "^5.1.2",
+    "@coreui/react": "^5.3.0",
     "@mantine/core": "^7.8.1",
     "@mantine/dates": "^7.9.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
