--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^7.8.1",
     "@mantine/dates": "^7.9.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
     "@tabler/icons-react": "^3.3.0",
     "@types/mapbox-gl": "^3.1.0",
@@ -44,6 +45,7 @@
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.10.2",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
@@ -53,7 +55,6 @@
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.13.0",
     "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.0",
@@ -71,6 +72,7 @@
     "sweetalert2": "^11.10.8",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.4",
+    "use-places-autocomplete": "^4.0.1",
     "video-react": "^0.16.0",
     "video.js": "^8.12.0"
   },
